--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -63,7 +63,7 @@ map ctrl+down resize_window shorter 5
 map kitty_mod+enter new_window_with_cwd
 
 # Layouts
-enabled_layouts tall:bias=70;full_size=1;mirrored=false,fat:bias=75;full_size=1;mirrored=true,fat:bias=75;full_size=1,grid
+enabled_layouts fat:bias=75;full_size=1,tall:bias=70;full_size=1;mirrored=false,fat:bias=75;full_size=1;mirrored=true,grid
 
 # Hides window decorations
 hide_window_decorations yes
