--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -66,7 +66,7 @@ map kitty_mod+enter new_window_with_cwd
 enabled_layouts fat:bias=75;full_size=1,tall:bias=70;full_size=1;mirrored=false,fat:bias=75;full_size=1;mirrored=true,grid
 
 # Hides window decorations
-hide_window_decorations yes
+# hide_window_decorations yes
 
 # Enable control for vim-kitty-navigator
 listen_on unix:/tmp/mykitty
@@ -74,3 +74,5 @@ allow_remote_control yes
 
 # Disable audio bell
 enable_audio_bell no
+
+font_size 13
