--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,6 +1,12 @@
+git:
+  paging:
+    colorArg: always
+    pager: delta --light --paging=never
 keybinding:
   universal:
     prevBlock: '<up>' # go one line up
     nextBlock: '<down>' # go one line down
     prevItem: '<left>' # goto the previous block / panel
     nextItem: '<right>' # goto the next block / panel
+    goInto: '<space>'
+    select: '<enter>'
