--- a/zsh/gantheme-dark.omp.yml
+++ b/zsh/gantheme-dark.omp.yml
@@ -4,12 +4,12 @@ version: 2
 final_space: true
 blocks:
 - type: prompt
+  newline: true
   alignment: left
   segments:
   - type: session
     style: plain
     template: "{{ .UserName }} "
-    background: ""
     foreground: p:blue
     text: ""
     duration: 0s
@@ -21,38 +21,48 @@ blocks:
       folder_icon: ....
       home_icon: "~"
       style: agnoster_short
-    background: ""
     foreground: p:pink
     text: ""
     duration: 0s
     namelength: 0
   - type: git
     style: plain
-    template: "{{ .HEAD }} "
+    template: "{{ .HEAD }} {{if .BranchStatus }}{{ .BranchStatus
+      }} {{ end }}{{ if .Working.Changed }} {{ end }}{{ if .Staging.Changed }} {{ end }}"
     properties:
+      fetch_status: true
+      fetch_upstream_icon: true
+      untracked_modes:
+        /Users/user/Projects/oh-my-posh/: no
       branch_icon: "\ue725 "
       cherry_pick_icon: "\ue29b "
       commit_icon: "\uf417 "
-      fetch_status: false
-      fetch_upstream_icon: false
       merge_icon: "\ue727 "
       no_commits_icon: "\uf0c3 "
       rebase_icon: "\ue728 "
       revert_icon: "\uf0e2 "
       tag_icon: "\uf412 "
-    background: ""
     foreground: p:lavender
     text: ""
     duration: 0s
     namelength: 0
+- type: prompt
+  alignment: left
+  newline: true
+  segments:
   - type: text
     style: plain
     template: 
-    background: ""
     foreground: p:closer
     text: ""
     duration: 0s
     namelength: 0
+secondary_prompt:
+  foreground: p:closer
+  template: "-> "
+transient_prompt:
+  template: " "
+
 palette:
   blue: "#89B4FA"
   closer: p:os
