--- a/zsh/gantheme-light.omp.yml
+++ b/zsh/gantheme-light.omp.yml
@@ -1,70 +1,57 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
 
-version: 2
-final_space: true
-blocks:
-- type: prompt
-  newline: true
-  alignment: left
-  segments:
-  - type: session
-    style: plain
-    template: "{{ .UserName }} "
-    foreground: p:blue
-    text: ""
-    duration: 0s
-    namelength: 0
-  - type: path
-    style: plain
-    template: "{{ .Path }} "
-    properties:
-      folder_icon: 
-      home_icon: "~"
-      style: agnoster_short
-    foreground: p:pink
-    text: ""
-    duration: 0s
-    namelength: 0
-  - type: git
-    style: plain
-    template: "{{ .HEAD }} {{if .BranchStatus }}{{ .BranchStatus
-      }} {{ end }}{{ if .Working.Changed }} {{ end }}{{ if .Staging.Changed }} {{ end }}"
-    properties:
-      fetch_status: true
-      fetch_upstream_icon: true
-      untracked_modes:
-        /Users/user/Projects/oh-my-posh/: no
-      branch_icon: "\ue725 "
-      cherry_pick_icon: "\ue29b "
-      commit_icon: "\uf417 "
-      merge_icon: "\ue727 "
-      no_commits_icon: "\uf0c3 "
-      rebase_icon: "\ue728 "
-      revert_icon: "\uf0e2 "
-      tag_icon: "\uf412 "
-    foreground: p:lavender
-    text: ""
-    duration: 0s
-    namelength: 0
-- type: prompt
-  alignment: left
-  newline: true
-  segments:
-  - type: text
-    style: plain
-    template: 
-    foreground: p:closer
-    text: ""
-    duration: 0s
-    namelength: 0
-secondary_prompt:
-  foreground: p:closer
-  template: "-> "
-transient_prompt:
-  template: " "
 palette:
   blue: "#1e66f5"
   closer: p:os
   lavender: "#7287FD"
   os: "#ACB0BE"
   pink: "#ea76cb"
+secondary_prompt:
+  template: "-> "
+  foreground: p:closer
+transient_prompt:
+  template: "\uf105 "
+blocks:
+- type: prompt
+  alignment: left
+  segments:
+  - template: "{{ .UserName }} "
+    foreground: p:blue
+    type: session
+    style: plain
+  - properties:
+      folder_icon: 
+      home_icon: "~"
+      style: agnoster_short
+    template: "{{ .Path }} "
+    foreground: p:pink
+    type: path
+    style: plain
+  - properties:
+      branch_icon: "\ue725 "
+      cherry_pick_icon: "\ue29b "
+      commit_icon: "\uf417 "
+      fetch_status: true
+      fetch_upstream_icon: true
+      merge_icon: "\ue727 "
+      no_commits_icon: "\uf0c3 "
+      rebase_icon: "\ue728 "
+      revert_icon: "\uf0e2 "
+      tag_icon: "\uf412 "
+      untracked_modes:
+        /Users/user/Projects/oh-my-posh/: "no"
+    template: "{{ .HEAD }} {{if .BranchStatus }}{{ .BranchStatus }} {{ end }}{{ if .Working.Changed }}\uf044 {{ end }}{{ if .Staging.Changed }}\uf046 {{ end }}"
+    foreground: p:lavender
+    type: git
+    style: plain
+  newline: true
+- type: prompt
+  alignment: left
+  segments:
+  - template: 
+    foreground: p:closer
+    type: text
+    style: plain
+  newline: true
+version: 3
+final_space: true
